Fixing lack of menu overlap

--- a/assets/scss/modules/leads-form.scss
+++ b/assets/scss/modules/leads-form.scss
@@ -8,9 +8,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: -3.75rem;
     @media only screen and (max-width: $leads--large) {
         height: auto;
         padding-bottom: 4.5rem;
+        margin-top: -3.375rem;
     }
     &__bkg {
         background-size: cover;
